--- a/2week/Delegate/Delegate.Tests/Delegate.Tests.csproj
+++ b/2week/Delegate/Delegate.Tests/Delegate.Tests.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Delegate\Delegate.csproj" />
+  </ItemGroup>
+
 </Project>
