--- a/2week/LINQ/LINQ.Tests/LINQ.Tests.csproj
+++ b/2week/LINQ/LINQ.Tests/LINQ.Tests.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LINQ\LINQ.csproj" />
+  </ItemGroup>
+
 </Project>
