--- a/2week/Dispose/Dispose.Tests/Dispose.Tests.csproj
+++ b/2week/Dispose/Dispose.Tests/Dispose.Tests.csproj
@@ -8,7 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -22,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LINQ\LINQ.csproj" />
+    <ProjectReference Include="..\Dispose\Dispose.csproj" />
   </ItemGroup>
 
 </Project>
